package com.mygdx.game;

public class GameSettings {
    public static final int TRASH_WIDTH = 100;
    public static final int TRASH_HEIGHT = 100;
    public static final int TRASH_VELOCITY = 15;
    public static final int BULLET_VELOCITY = 20000;
    public static final int STARTING_TRASH_APPEARANCE_COOL_DOWN = 1;
    static int SHOOTING_COOL_DOWN = 300;
    public static final int SCR_WIDTH = 720;
    public static final int SCR_HEIGHT = 1280;
    public static final int SHIP_WIDTH = 150;
    public static final int BULLET_WIDTH = 15;
    public static final int BULLET_HEIGHT = 45;
    public static final short TRASH_BIT = 2;
    public static final short SHIP_BIT = 1;
    public static final short BULLET_BIT = 4;
    public static final int SHIP_HEIGHT = 150;
    public static int SHIP_FORCE_RATIO = 500;

}
